@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.2-5.002
-Date: 2023-12-07
+Version: 3.2-5.003
+Date: 2023-12-08
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
@@ -57,7 +57,7 @@ Authors@R: c(person("Adrian", "Baddeley",
 	     person("Hangsheng", "Wang",
 	            role = "ctb"))
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
-Depends: R (>= 3.5.0), spatstat.data (>= 3.0-1), spatstat.geom (>= 3.2-7), spatstat.random (>= 3.2-1), stats, graphics, grDevices, utils, methods, nlme
+Depends: R (>= 3.5.0), spatstat.data (>= 3.0-1), spatstat.geom (>= 3.2-7.001), spatstat.random (>= 3.2-1), stats, graphics, grDevices, utils, methods, nlme
 Imports: spatstat.utils (>= 3.0-3), spatstat.sparse (>= 3.0-1), goftest (>= 1.2-2), Matrix, abind
 Suggests: sm, gsl, locfit, spatial, fftwtools (>= 0.9-8), spatstat.linnet (>= 3.1), spatstat.model (>= 3.2-3), spatstat (>= 3.0-5)
 Description: Functionality for exploratory data analysis and nonparametric analysis of
