@@ -124,6 +124,8 @@ export("dclf.sigtrace")
 export("dclf.test")
 export("densityAdaptiveKernel")
 export("densityAdaptiveKernel.ppp")
+export("densityAdaptiveKernel.ppplist")
+export("densityAdaptiveKernel.splitppp")
 export("densitycrossEngine")
 export("densityfun")
 export("densityfun.ppp")
@@ -591,6 +593,8 @@ S3method("collapse", "fv")
 S3method("compatible", "rat")
 S3method("contour", "ssf")
 S3method("densityAdaptiveKernel", "ppp")
+S3method("densityAdaptiveKernel", "ppplist")
+S3method("densityAdaptiveKernel", "splitppp")
 S3method("densityfun", "ppp")
 S3method("densityHeat", "ppp")
   S3method("density", "ppp")
